Kubernetes/backend/hasura/hasura-app/hasura-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hasura-deployment
  namespace: hasura
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hasura
      component: pod
  template:
    metadata:
      labels:
        app: hasura
        component: pod
    spec:
      containers:
      - image: hasura/graphql-engine:v1.1.1
        imagePullPolicy: IfNotPresent
        name: hasura
        ports:
        - containerPort: 8080
